--- a/configure.ac
+++ b/configure.ac
@@ -36,7 +36,7 @@ AC_GNU_SOURCE
 # set CFLAGS and CXXFLAGS
 # condition on BWT Type!
 ## 0 - Use this to use the original BWT code 
-extended_CFLAGS="-D_TMAP_BWT_RUN_TYPE=0";
+extended_CFLAGS="-D_TMAP_BWT_RUN_TYPE=0 -D_USE_KNETFILE -Isrc/samtools -DSAMTOOLS_MAIN";
 default_CFLAGS="-Wall -g -O3 -pthread -msse3";
 default_CXXFLAGS="-Wall -g -O3 -pthread -msse3";
 extended_CXXFLAGS="-D__STDC_LIMIT_MACROS -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS"; # for <stdint.h> and <inttypes.h>
